minro color changes to nav

--- a/css/theme-variables.css
+++ b/css/theme-variables.css
@@ -69,11 +69,11 @@
   --edge-blur: #edf2f5;
   --switch-bg: #e2e8f0;
   --switch-handle: #ffffff;
-  --glass-bg: var(--rgba-white-20);
+  --glass-bg: var(--rgba-white-60);
   --glass-border: var(--rgba-white-40);
   --glass-highlight: var(--rgba-white-80);
-  --icon-dim: var(--rgba-white-08);
-  --icon-bright: #ffffff;
+  --icon-dim: var(--rgba-black-10);
+  --icon-bright: var(--rgba-black-60);
   --switch-icon-active-color: rgba(255, 255, 255, 0.81);
   --switch-icon-active-shadow: rgba(39, 37, 37, 0.8);
   --Parent: rgb(221, 221, 221);
@@ -138,11 +138,11 @@
   --edge-blur: #0c1923;
   --switch-bg: #27272a;
   --switch-handle: #ffffff;
-  --glass-bg: var(--rgba-black-20);
+  --glass-bg: var(--rgba-black-60);
   --glass-border: var(--rgba-white-10);
   --glass-highlight: var(--rgba-white-20);
-  --icon-dim: var(--rgba-white-40);
-  --icon-bright: #ffffff;
+  --icon-dim: var(--rgba-white-10);
+  --icon-bright: var(--rgba-white-90);
   --switch-icon-active-color: rgba(255, 255, 255, 1);
   --switch-icon-active-shadow: rgba(104, 104, 104, 0.6);
   --switch-icon-inactive-color: rgba(255, 255, 255, 0.808);
