--- a/css/custom.css
+++ b/css/custom.css
@@ -55,9 +55,8 @@
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 2rem;
-    padding: 2rem;
 }
 
 .app_logo_list img {
