--- a/css/custom.css
+++ b/css/custom.css
@@ -49,14 +49,16 @@
 .skills-set ul li {
     color: var(--text-primary);
 }
-
+.skills-set ul{
+    padding-left: 25px;
+}
 .app_logo_list {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: 2rem;
+    gap: 0.5rem;
 }
 
 .app_logo_list img {
