--- a/css/theme-variables.css
+++ b/css/theme-variables.css
@@ -28,7 +28,7 @@
   --dark-color: #edf2f5;
 
   --bg-primary: #edf2f5;
-  --bg-secondary: #ffffff;
+  --bg-secondary: #1a2332;
   --bg-tertiary: #f1f5f9;
   --bg-surface: var(--rgba-white-70);
 
@@ -86,7 +86,7 @@
   --rgba-accent-10: rgba(14, 165, 233, 0.4);
 
   --bg-primary: #0c1923;
-  --bg-secondary: #1a2332;
+  --bg-secondary: #fff2f5;
   --bg-tertiary: #1f2937;
   --bg-surface: rgba(20, 37, 52, 0.75);
 
@@ -245,9 +245,6 @@ input, textarea, button, select {
     inset 0 -2px 5px var(--rgba-black-05);
 }
 
-.main-nav{
-  background-color: var(--bg-primary);
-}
 .menu-item-btn{
   color: var(--text-primary);
 }
@@ -255,6 +252,22 @@ input, textarea, button, select {
   background-color: var(--tk-yellow-accent);
   color: var(--text-primary);
 }
+
+.main-nav {
+  position: fixed;
+  width: 100%;
+  background-color: var(--bg-primary);
+  border-bottom: 2px solid var(--bg-secondary);
+  transition: background 0.3s, border 0.3s;
+  /* Backup for non-JS */
+}
+
+.navbar-container {
+  margin: 0 auto;
+  width: var(--container-width);
+  background-color: var(--container-bg);
+}
+
 
 .bento-child,
 .case-link {
