--- a/css/theme-variables.css
+++ b/css/theme-variables.css
@@ -179,7 +179,7 @@ input, textarea, button, select {
 }
 
 .blur-frame {
-  position: sticky;
+  position: absolute;
   top: 0;
   width: 100%;
   height: 150px;
