--- a/css/custom.css
+++ b/css/custom.css
@@ -174,6 +174,10 @@ body.modal-open {
     background-color: transparent;
     border: 2px solid transparent;
 }
+.navbar-container.scrolled {
+    background-color: var(--bg-primary);
+    border-color: var(--bg-secondary);
+}
 .navbar-container .main-nav .menu-item-btn {
     color: var(--text-primary);
 }
@@ -190,6 +194,7 @@ body.modal-open {
     border: 2px solid var(--bg-secondary);
 }
 .navbar-container.scrolled .main-nav{
-    background-color: var(--bg-primary);
+    background-color: transparent;
+    border-color: transparent;
 }
 
