--- a/css/custom.css
+++ b/css/custom.css
@@ -203,12 +203,12 @@ body.modal-open {
     top: 0;
     left: 0;
     pointer-events: none;
-    background: var(--bg-primary);
-    color: var(--text-primary);
+    background: var(--bg-secondary);
+    color: var(--text-inverse);
     padding: 14px 28px;
     border-radius: 24px 24px 24px 0px;
-    border: 2px solid var(--bg-secondary);
-    box-shadow: 6px 6px 0px rgba(var(--bg-secondary), 0.5);
+    border: 2px solid var(--bg-primary);
+    box-shadow: 6px 6px 0px rgba(var(--bg-primary), 0.5);
     font-weight: 400;
     font-size: 1.1rem;
     z-index: 9999;
