--- a/css/custom.css
+++ b/css/custom.css
@@ -194,8 +194,8 @@ body.modal-open {
     top: 0;
     left: 0;
     pointer-events: none;
-    background: var(--bg-secondary);
-    color: var(--text-inverse);
+    background: var(--tk-yellow-accent);
+    color: var(--text-secondary);
     padding: 14px 28px;
     border-radius: 24px 24px 24px 0px;
     border: 2px solid var(--bg-primary);
