--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,18 @@
+.button-primary {
+    border: 2px solid var(--bg-primary);
+    background-color: var(--tk-yellow-accent);
+    color: var(--text-inverse);
+    text-align: center;
+    letter-spacing: .02rem;
+    text-transform: uppercase;
+    transform-style: preserve-3d;
+    padding: .7rem 2.1rem;
+    font-weight: 700;
+    transition: box-shadow .2s, transform .2s;
+    transform: rotateX(15deg) rotateY(-15deg) rotate(0) skew(-10deg, 2deg);
+    box-shadow: 4px 6px 4px #10152233;
+}
+
 .icon-small {
     color: var(--text-primary);
 }
@@ -139,20 +154,7 @@ body.modal-open {
     right: 24px;
     float: right;
     z-index: 100;
-    background: var(--accent-primary);
-    color: var(--text-primary);
-    border: none;
-    padding: 8px 20px;
-    border-radius: 9999px;
-    font-weight: 600;
     cursor: pointer;
-    transition: all 0.2s ease;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-}
-
-.close-btn:hover {
-    background: var(--accent-primary-hover);
-    transform: scale(1.05);
 }
 
 //man navbar animation supportive css
